--- a/projects/mistral/frontend/styles/style.scss
+++ b/projects/mistral/frontend/styles/style.scss
@@ -674,13 +674,18 @@ div.board + pre {
 }
 .sidenav .accordion-item {
   border: 1px solid rgba(255, 255, 255, 0) !important;
+  .accordion-body {
+    padding: 1rem 0.25rem !important;
+  }
 }
+
 .accordion-button:focus {
   z-index: 3;
   border-color: #E49D2B !important;
   outline: 0;
   box-shadow: 0 0 0 0.25rem #e49d2b56 !important;
 }
+
 .accordion-button:not(.collapsed) {
   color: #fff !important;
   background-color: #E49D2B !important;
@@ -689,12 +694,8 @@ div.board + pre {
 
 .accordion-button:not(.collapsed)::after {
 	background-image: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 16 16' fill='white' %3e%3cpath fill-rule='evenodd' d='M1.646 4.646a.5.5 0 0 1 .708 0L8 10.293l5.646-5.647a.5.5 0 0 1 .708.708l-6 6a.5.5 0 0 1-.708 0l-6-6a.5.5 0 0 1 0-.708z'/%3e%3c/svg%3e") !important;
-	-webkit-transform: rotate(-180deg);
-	-o-transform: rotate(-180deg);
-	transform: rotate(-180deg);
-	fill: #fff;
-	color: #fff;
 }
+
 .sidenav .nav-tabs .nav-link:hover,
 .sidenav .nav-pills .nav-link:hover {
   background-color: rgba(0, 0, 0, 0.04);
